--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_map: ^7.0.2
   flutter_riverpod: ^2.6.1
   curved_navigation_bar: ^1.0.6
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
